支持iOS侧FBFlutterViewContainer预渲染。提供preRender接口，具体使用方式参考example工程。

--- a/example/ios/Runner/UIViewControllerDemo.xib
+++ b/example/ios/Runner/UIViewControllerDemo.xib
@@ -46,6 +46,17 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="agP-ea-Mdd">
+                    <rect key="frame" x="106.5" y="276" width="162" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="162" id="4w7-aa-b3O"/>
+                        <constraint firstAttribute="height" constant="30" id="dyb-Ct-yY9"/>
+                    </constraints>
+                    <state key="normal" title="Pre-render Flutter Page"/>
+                    <connections>
+                        <action selector="preRenderFlutterPage:" destination="-1" eventType="touchUpInside" id="rMf-GU-6Tt"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -53,11 +64,13 @@
                 <constraint firstItem="bCg-og-n1K" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="9T9-4m-GgT"/>
                 <constraint firstItem="Nzh-7M-COj" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="D6k-vF-b5G"/>
                 <constraint firstItem="bCg-og-n1K" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="120" id="G4r-vQ-M9g"/>
+                <constraint firstItem="Nzh-7M-COj" firstAttribute="top" secondItem="agP-ea-Mdd" secondAttribute="bottom" constant="7.5" id="H3s-ym-sQ4"/>
                 <constraint firstItem="DT7-uk-4YM" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="a5O-rA-Z3g"/>
                 <constraint firstItem="DT7-uk-4YM" firstAttribute="top" secondItem="Nzh-7M-COj" secondAttribute="bottom" constant="7.5" id="rhd-e4-oVP"/>
                 <constraint firstItem="bCg-og-n1K" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.2" id="zgc-4g-vU3"/>
+                <constraint firstItem="agP-ea-Mdd" firstAttribute="centerX" secondItem="Nzh-7M-COj" secondAttribute="centerX" id="zp9-gR-ptd"/>
             </constraints>
-            <point key="canvasLocation" x="-759.20000000000005" y="143.47826086956522"/>
+            <point key="canvasLocation" x="-175" y="52"/>
         </view>
     </objects>
 </document>
