--- a/example/android/app/src/main/res/layout/native_page.xml
+++ b/example/android/app/src/main/res/layout/native_page.xml
@@ -2,73 +2,88 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@android:color/white"
     android:gravity="left"
-    android:background="@android:color/white">
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="80dp"
-        android:id="@+id/info"
         android:text="@string/native_info"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="28sp"
-        android:layout_gravity="center_horizontal"/>
+        android:textSize="28sp" />
 
-    <View android:layout_width="1dp"
+    <View
+        android:layout_width="1dp"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
     <TextView
-        android:background="@android:color/holo_orange_dark"
-        android:layout_margin="8.0dp"
-        android:padding="8.0dp"
-        android:textColor="@android:color/black"
         android:id="@+id/open_native"
-        android:textAllCaps="false"
-        android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/open_native" />
+        android:layout_margin="8.0dp"
+        android:background="@android:color/holo_orange_dark"
+        android:padding="8.0dp"
+        android:text="@string/open_native"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 
     <TextView
-        android:background="@android:color/holo_orange_dark"
-        android:layout_margin="8.0dp"
-        android:padding="8.0dp"
-        android:textColor="@android:color/black"
         android:id="@+id/open_flutter"
-        android:textAllCaps="false"
-        android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/open_flutter" />
-
-    <TextView
-        android:background="@android:color/holo_orange_dark"
         android:layout_margin="8.0dp"
+        android:background="@android:color/holo_orange_dark"
         android:padding="8.0dp"
-        android:textColor="@android:color/black"
-        android:id="@+id/open_custom_view_tab"
+        android:text="@string/open_flutter"
         android:textAllCaps="false"
-        android:textSize="16sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/open_custom_view_tab" />
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 
     <TextView
+        android:id="@+id/open_custom_view_tab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8.0dp"
         android:background="@android:color/holo_orange_dark"
+        android:padding="8.0dp"
+        android:text="@string/open_custom_view_tab"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/open_flutter_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8.0dp"
+        android:layout_marginTop="8.0dp"
+        android:layout_marginRight="8.0dp"
+        android:layout_marginBottom="8.0dp"
+        android:background="@android:color/holo_orange_dark"
+        android:padding="8.0dp"
+        android:text="@string/open_flutter_fragment"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/open_flutter_platformview_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8.0dp"
         android:layout_marginTop="8.0dp"
         android:layout_marginRight="8.0dp"
         android:layout_marginBottom="80.0dp"
+        android:background="@android:color/holo_orange_dark"
         android:padding="8.0dp"
-        android:textColor="@android:color/black"
-        android:id="@+id/open_flutter_fragment"
+        android:text="@string/open_flutter_platformview_fragment"
         android:textAllCaps="false"
-        android:textSize="16sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/open_flutter_fragment" />
-
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 </LinearLayout>
